도도메인변경

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 http {
     server {
         listen 80;
-        server_name 118.67.130.119;
+        server_name minjae-lee.kro.kr;
 
         location / {
             root /usr/share/nginx/html;
