--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ http {
         location / {
             root /usr/share/nginx/html;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
